WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
207894
[ Mac wk2 ] http/wpt/beacon/beacon-quota.html is flaky failing
https://bugs.webkit.org/show_bug.cgi?id=207894
Summary
[ Mac wk2 ] http/wpt/beacon/beacon-quota.html is flaky failing
Jason Lawrence
Reported
2020-02-18 09:00:33 PST
http/wpt/beacon/beacon-quota.html Description: This test is flaky failing on Mac wk2. The oldest failure that I am able to gather a diff from is
r255116
, but I see failures back to
r245991
. History:
https://results.webkit.org/?suite=layout-tests&test=http%2Fwpt%2Fbeacon%2Fbeacon-quota.html&platform=mac&limit=50000
Diff: --- /Volumes/Data/slave/mojave-release-tests-wk2/build/layout-test-results/http/wpt/beacon/beacon-quota-expected.txt +++ /Volumes/Data/slave/mojave-release-tests-wk2/build/layout-test-results/http/wpt/beacon/beacon-quota-actual.txt @@ -1,6 +1,7 @@ CONSOLE MESSAGE: line 44: Beacon API cannot load
http://localhost:8800/
. Reached maximum amount of queued data of 64Kb for keepalive requests CONSOLE MESSAGE: line 52: Beacon API cannot load
http://localhost:8800/
. Reached maximum amount of queued data of 64Kb for keepalive requests +CONSOLE MESSAGE: line 54: Beacon API cannot load
http://localhost:8800/WebKit/beacon/resources/beacon-preflight.py?allowCors=1&cmd=put&id=40ff52a3-4794-4fca-9db5-3ea23fdfb944
. Reached maximum amount of queued data of 64Kb for keepalive requests PASS Beacon with a body above the Quota Limit should fail. -PASS Multiple Beacons Quota Limit +FAIL Multiple Beacons Quota Limit assert_true: Allocated quota should be returned once the beacon is no longer in flight expected true got false
Attachments
Patch
(9.33 KB, patch)
2020-03-18 09:22 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-02-18 09:00:53 PST
<
rdar://problem/59551688
>
Jason Lawrence
Comment 2
2020-02-18 09:06:51 PST
I have marked this test as failing while this issue is investigated.
https://trac.webkit.org/changeset/256832/webkit
Jason Lawrence
Comment 3
2020-02-18 14:54:26 PST
I am able to reproduce this issue on
r256844
with the command below. run-webkit-tests http/wpt/beacon/beacon-quota.html --iterations 3000 --exit-after-n-failures 5 -f --force [39/3000] http/wpt/beacon/beacon-quota.html failed unexpectedly (text diff) [64/3000] http/wpt/beacon/beacon-quota.html failed unexpectedly (text diff) [107/3000] http/wpt/beacon/beacon-quota.html failed unexpectedly (text diff) [122/3000] http/wpt/beacon/beacon-quota.html failed unexpectedly (text diff) [127/3000] http/wpt/beacon/beacon-quota.html failed unexpectedly (text diff) Exiting early after 5 failures. 124 tests run. 119 tests ran as expected, 5 didn't (2876 didn't run):
Chris Dumez
Comment 4
2020-03-18 09:22:21 PDT
Created
attachment 393869
[details]
Patch
Geoffrey Garen
Comment 5
2020-03-18 10:03:06 PDT
Comment on
attachment 393869
[details]
Patch r=me
WebKit Commit Bot
Comment 6
2020-03-18 10:57:50 PDT
Comment on
attachment 393869
[details]
Patch Clearing flags on attachment: 393869 Committed
r258649
: <
https://trac.webkit.org/changeset/258649
>
WebKit Commit Bot
Comment 7
2020-03-18 10:57:52 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug