[ Mac wk2 ] http/wpt/beacon/beacon-quota.html is flaky failing https://bugs.webkit.org/show_bug.cgi?id=207894 <rdar://problem/59551688>

Reviewed by Geoffrey Garen.

Source/WebCore:

Add internals API exposing the number of inflight beacon loads for a given navigator object
so that the test can rely on it.

* Modules/beacon/NavigatorBeacon.h:
* testing/Internals.cpp:
(WebCore::Internals::inflightBeaconsCount const):
* testing/Internals.h:
* testing/Internals.idl:

LayoutTests:

Update test to address flakiness and unskip it.

* http/wpt/beacon/beacon-quota-expected.txt:
* http/wpt/beacon/beacon-quota.html:
* platform/mac-wk2/TestExpectations:


Canonical link: https://commits.webkit.org/222162@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258649 268f45cc-cd09-0410-ab3c-d52691b4dbfc