Source/WebCore/Modules/beacon/NavigatorBeacon.h
@@ -46,10 +46,13 @@ public:
     ~NavigatorBeacon();
     static ExceptionOr<bool> sendBeacon(Navigator&, Document&, const String& url, Optional<FetchBody::Init>&&);
 
+    size_t inflightBeaconsCount() const { return m_inflightBeacons.size(); }
+
+    WEBCORE_EXPORT static NavigatorBeacon* from(Navigator&);
+
 private:
     ExceptionOr<bool> sendBeacon(Document&, const String& url, Optional<FetchBody::Init>&&);
 
-    static NavigatorBeacon* from(Navigator&);
     static const char* supplementName();
 
     void notifyFinished(CachedResource&) final;
